wip: point info

--- a/src/translations/languages/en.json
+++ b/src/translations/languages/en.json
@@ -38,7 +38,7 @@
     "command": {
       "builder": {
         "description": "Provides information about your current points status.",
-        "name": "point"
+        "name": "point-info"
       }
     }
   },
